--- a/projetos.html
+++ b/projetos.html
@@ -63,5 +63,50 @@ permalink: /projetos/
             </div>
         </div>
     </a>
+    <a class="item-a" href="">
+        <div class="item" style="background-image: url(/assets/img/logo.png);">
+            <div class="item-title">
+                <h3>project title</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>project title</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate ipsum, possimus necessitatibus
+                    vel quasi nam pariatur minima illo facere laboriosam. Corrupti, non fugiat ut soluta officia
+                    distinctio veniam laboriosam qui.
+                </p>
+            </div>
+        </div>
+    </a>
+    <a class="item-a" href="">
+        <div class="item" style="background-image: url(/assets/img/logo.png);">
+            <div class="item-title">
+                <h3>project title</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>project title</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate ipsum, possimus necessitatibus
+                    vel quasi nam pariatur minima illo facere laboriosam. Corrupti, non fugiat ut soluta officia
+                    distinctio veniam laboriosam qui.
+                </p>
+            </div>
+        </div>
+    </a>
+    <a class="item-a" href="">
+        <div class="item" style="background-image: url(/assets/img/logo.png);">
+            <div class="item-title">
+                <h3>project title</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>project title</h3>
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate ipsum, possimus necessitatibus
+                    vel quasi nam pariatur minima illo facere laboriosam. Corrupti, non fugiat ut soluta officia
+                    distinctio veniam laboriosam qui.
+                </p>
+            </div>
+        </div>
+    </a>
 
 </div>
