--- a/projetos.html
+++ b/projetos.html
@@ -33,77 +33,31 @@ permalink: /projetos/
     </a>
 
     <a class="item-a" href="">
-        <div class="item" style="background-image: url(/assets/img/logo.png);">
+        <div class="item" style="background-image: url(/assets/img/python.png);">
             <div class="item-title">
-                <h3>project title</h3>
+                <h3>Python</h3>
             </div>
             <div class="item-desc disable-scrollbars">
-                <h3>project title</h3>
+                <h3>Introdução a Python</h3>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate ipsum, possimus necessitatibus
-                    vel quasi nam pariatur minima illo facere laboriosam. Corrupti, non fugiat ut soluta officia
-                    distinctio veniam laboriosam qui.
-                </p>
-            </div>
-        </div>
-    </a>
-    
-    <a class="item-a" href="">
-        <div class="item" style="background-image: url(/assets/img/logo.png);">
-            <div class="item-title">
-                <h3>project title</h3>
-            </div>
-            <div class="item-desc disable-scrollbars">
-                <h3>project title</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate ipsum, possimus necessitatibus
-                    vel quasi nam pariatur minima illo facere laboriosam. Corrupti, non fugiat ut soluta officia
-                    distinctio veniam laboriosam qui.
+                    Este minicurso é uma introdução a linguagem de programação de alto nível, Python. Ele criará uma base para
+                    aqueles que querem aprender mais sobre esta linguagem, ele tem objetivo de dar uma fundação do tema para os
+                    futuros minicursos.
                 </p>
             </div>
         </div>
     </a>
     <a class="item-a" href="">
-        <div class="item" style="background-image: url(/assets/img/logo.png);">
+        <div class="item" style="background-image: url(/assets/img/c.png);">
             <div class="item-title">
-                <h3>project title</h3>
+                <h3>C</h3>
             </div>
             <div class="item-desc disable-scrollbars">
-                <h3>project title</h3>
+                <h3>Introdução a C</h3>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate ipsum, possimus necessitatibus
-                    vel quasi nam pariatur minima illo facere laboriosam. Corrupti, non fugiat ut soluta officia
-                    distinctio veniam laboriosam qui.
-                </p>
-            </div>
-        </div>
-    </a>
-    <a class="item-a" href="">
-        <div class="item" style="background-image: url(/assets/img/logo.png);">
-            <div class="item-title">
-                <h3>project title</h3>
-            </div>
-            <div class="item-desc disable-scrollbars">
-                <h3>project title</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate ipsum, possimus necessitatibus
-                    vel quasi nam pariatur minima illo facere laboriosam. Corrupti, non fugiat ut soluta officia
-                    distinctio veniam laboriosam qui.
-                </p>
-            </div>
-        </div>
-    </a>
-    <a class="item-a" href="">
-        <div class="item" style="background-image: url(/assets/img/logo.png);">
-            <div class="item-title">
-                <h3>project title</h3>
-            </div>
-            <div class="item-desc disable-scrollbars">
-                <h3>project title</h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate ipsum, possimus necessitatibus
-                    vel quasi nam pariatur minima illo facere laboriosam. Corrupti, non fugiat ut soluta officia
-                    distinctio veniam laboriosam qui.
+                    Este minicurso é uma introdução a linguagem de programação C. Ele criará uma base para
+                    aqueles que querem aprender mais sobre esta linguagem, ele tem objetivo de dar uma fundação do tema para os
+                    futuros minicursos.
                 </p>
             </div>
         </div>
