links dos cards

--- a/projetos.html
+++ b/projetos.html
@@ -13,7 +13,7 @@ permalink: /projetos/
 
 <div class="container-projetos">
 
-    <a class="item-a" href="">
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
         <div class="item" style="background-image: url(/assets/img/hello.png);">
             <div class="item-title">
                 <h3>Um Hello World em Cada Liguagem</h3>
@@ -32,7 +32,7 @@ permalink: /projetos/
         </div>
     </a>
 
-    <a class="item-a" href="">
+    <a class="item-a" href="https://www.youtube.com/watch?v=LEgfEv3Iwjs&list=PLhzPMRnO3vdb5FhzB1Kwzzfc_B9fkdPAa">
         <div class="item" style="background-image: url(/assets/img/python.png);">
             <div class="item-title">
                 <h3>Python</h3>
@@ -47,7 +47,7 @@ permalink: /projetos/
             </div>
         </div>
     </a>
-    <a class="item-a" href="">
+    <a class="item-a" href="link">
         <div class="item" style="background-image: url(/assets/img/c.png);">
             <div class="item-title">
                 <h3>C</h3>
@@ -62,5 +62,4 @@ permalink: /projetos/
             </div>
         </div>
     </a>
-
 </div>
