--- a/projetos.html
+++ b/projetos.html
@@ -5,6 +5,291 @@ title: Projetos
 permalink: /projetos/
 ---
 
+<h1>Hardware</h1>
+<p>Texto vazio</p>
+
+<div class="container-projetos">
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=TZ8Sc4lDhYM&list=PLhzPMRnO3vdagWDlmRmYBtPCamrHscNnR">
+        <div class="item" style="background-image: url(/assets/img/hello.png);">
+            <div class="item-title">
+                <h3>Um Hello World em Cada Liguagem</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Um Hello World em Cada Liguagem</h3>
+                <p>
+                    A série “Um Hello World em cada linguagem” visa discutir uma linguagem de programação distinta por
+                    vídeo, trazendo sua história, características e aplicações, e logo após esta contextualização, é
+                    feita uma explicação de como configurar o ambiente de trabalho para a linguagem, o que será feito
+                    sempre que possível em alguma distribuição de linux e utilizando-se de IDE’s e/ou editores open
+                    source. Logo após a configuração do ambiente, é feito um pequeno demonstrativo da linguagem, onde é
+                    escrito um programa “Hello World”, a fim de mostrar que a linguagem está funcionando.
+                </p>
+            </div>
+        </div>
+    </a>
+
+
+    <a class="item-a" href="https://www.youtube.com/watch?v=LEgfEv3Iwjs&list=PLhzPMRnO3vdb5FhzB1Kwzzfc_B9fkdPAa">
+        <div class="item" style="background-image: url(/assets/img/python.png);">
+            <div class="item-title">
+                <h3>Python</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Introdução a Python</h3>
+                <p>
+                    Este minicurso é uma introdução a linguagem de programação de alto nível, Python. Ele criará uma base para
+                    aqueles que querem aprender mais sobre esta linguagem, ele tem objetivo de dar uma fundação do tema para os
+                    futuros minicursos.
+                </p>
+            </div>
+        </div>
+    </a>
+    <a class="item-a" href="link">
+        <div class="item" style="background-image: url(/assets/img/c.png);">
+            <div class="item-title">
+                <h3>C</h3>
+            </div>
+            <div class="item-desc disable-scrollbars">
+                <h3>Introdução a C</h3>
+                <p>
+                    Este minicurso é uma introdução a linguagem de programação C. Ele criará uma base para
+                    aqueles que querem aprender mais sobre esta linguagem, ele tem objetivo de dar uma fundação do tema para os
+                    futuros minicursos.
+                </p>
+            </div>
+        </div>
+    </a>
+    
+</div>
+
 <div>
     <h1>Projetos</h1>
     <p>O Colmeia atualmente devido a pandemia focou suas atividades na produção de vídeos para o youtube você pode nos
