--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 {% for post in paginator.posts %}
 <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
 <p class="author">
-    <p>by {{post.author}}. {{ post.date | date: "%-B %d, %Y"}}</p>
+    <p>por {{post.author}}. {{ post.date | date: "%-B %d, %Y"}}</p>
 </p>
 <div class="content">
     {{ post.content }}
